[package]
name = "mshtml_webview"
version = "0.1.0"
authors = ["zxey <zxey@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["windef", "minwindef", "winuser", "ole2", "libloaderapi", "errhandlingapi", "ntdef", "basetsd", "winerror", "wingdi", "combaseapi", "shobjidl_core", "wtypesbase", "shobjidl"] }
libc = "0.2"
com = "0.1"
winreg = "0.6"