[package]
name = 'mshtml_webview'
version = '0.1.0'
authors = ['Richard Hozák <r.hozak@seznam.cz>']
edition = '2018'
license = 'MIT OR Apache-2.0'

[dependencies]
libc = '0.2'

[dependencies.winapi]
version = '0.3'
features = [
    'impl-default',
    'minwindef',
    'ntdef',
    'windef',
    'winerror',
    'errhandlingapi',
    'libloaderapi',
    'objidl',
    'ole2',
    'winuser',
    'oaidl',
    'guiddef',
    'wtypes',
    'oleauto'
]

[dependencies.com]
git = 'https://github.com/microsoft/com-rs.git'
